fix button views on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ body {
 	font-weight:bold;
 	padding: 14px 48px;
 	text-decoration:none;
+	-webkit-appearance: none;
 }
 
 .sendButton:active {
